# dsp-tools-rustified

./: .gitignore  .sourcery.yaml  Cargo.toml  pyproject.toml
docs/developers/: mkdocs.md  packaging.md  start-stack-command.md  user-data.md
docs/file-formats/: xml-data-file.md
docs/file-formats/json-project/: overview.md
python/dsp_tools/commands/: start_stack.py  template.py
python/dsp_tools/commands/excel2json/: properties.py
src/: lib.rs
test/distribution/: test_cli.py
testdata/bitstreams/: test.xml
testdata/id2iri/: test-id2iri-data.xml
testdata/id2iri/remove-resources/: data.xml
testdata/invalid-testdata/json-project/: circular-ontology.json  duplicate-property.json  duplicate-resource.json  invalid-super-property.json  nonexisting-cardinality.json  nonexisting-super-property.json  nonexisting-super-resource.json
testdata/invalid-testdata/xml-data/: duplicate-ark.xml  duplicate-iri.xml  empty-label.xml  invalid-resource-tag.xml  utf8-text-with-xml-tags.xml
testdata/json-project/: test-project-minimal.json  test-project-systematic.json
testdata/xml-data/: test-data-minimal.xml  test-data-systematic.xml
testdata/xml-data/circular-references/: test_circles_onto.json
