[package]
name = "dsp-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "dsp_tools"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

# [dependencies]
# rand = "0.8.4"

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py12" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.12
features = ["abi3-py312"]
