[package]
name = "dsp-tools"
version = "0.1.0"
edition = "2021"

[lib]
# name of the native library. Use this name in Python to import this lib. 
# If you change this, you must also change the name of the `#[pymodule]` in `src/lib.rs`.
name = "dsp_tools"
# "cdylib" is necessary to produce a shared library for Python to import from.
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use name_of_lib;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

# [dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py12" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.12
features = ["abi3-py312"]
